[package]
name = "simetry"
authors = ["Adnan Ademovic <adnanademovic100@gmail.com>"]
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/adnanademovic/simetry"
description = "Interface with telemetry of various racing and driving sims"
version = "0.2.3"
build = "build.rs"

[dependencies]
anyhow = "1.0.97"
async-trait = "0.1.88"
byteorder = "1.5.0"
once_cell = "1.21.2"
yaml-rust = "0.4.5"
bitflags = "2.9.0"
itertools = "0.14.0"
typename = "0.1.2"
log = "0.4.27"
uom = { version = "0.36.0", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
hyper = { version = "0.14.25", features = ["client", "http1", "http2", "tcp"] }
time = { version = "0.3.41", features = ["serde-human-readable"] }

[features]
unstable_generic_http_client = []
with_truck_simulator = []
with_r3e = []

default = []

[dependencies.tokio]
version = "1.44.1"
features = [
    "macros",
    "net",
    "rt",
    "rt-multi-thread",
    "time",
]

[dependencies.windows]
version = "0.44.0"
features = [
    "Win32",
    "Win32_Foundation",
    "Win32_System",
    "Win32_System_Memory",
    "Win32_System_Threading",
    "Win32_System_WindowsProgramming",
    "Win32_UI_WindowsAndMessaging",
]

[build-dependencies]
bindgen = "0.66.1"
